Implemented Unit Testing For getLatestVersion